--- a/public/css/roomdetail.css
+++ b/public/css/roomdetail.css
@@ -336,7 +336,7 @@
 .list_btn {
   border: 1px solid #b0afaf;
   text-align: center;
-  margin: 100px auto 50px;
+  margin: 100px auto;
   width: 120px;
   height: 40px;
   line-height: 42px;
