--- a/views/king_guest_room.ejs
+++ b/views/king_guest_room.ejs
@@ -283,7 +283,7 @@
         <button>
           <span class="material-symbols-outlined"> favorite </span>
         </button>
-        <button>
+        <button onclick="javascript:location.href='/reservation'">
           <span class="material-symbols-outlined"> calendar_month </span>
         </button>
       </div>
