--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,13 +39,13 @@
                     <div class="main_checkin">
                         <h6>체크인</h6>
                         <div>
-                            <input id="main_IN" value="2022-06-24" readonly></input>
+                            <input id="MainCheakIn" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                     <span>
                         <span></span>
                     </span>
-                    <div class="main_checkout">
+                    <div class="MainCheakOut">
                         <h6>체크아웃</h6>
                         <div>
                             <input id="main_OUT" value="2022-06-24" readonly></input>
