--- a/views/nam_duplex_suite.ejs
+++ b/views/nam_duplex_suite.ejs
@@ -1,14 +1,14 @@
 <main>
   <section class="img_main">
     <div class="topCont">
-      <div class="topimg family_premium_img">
+      <div class="topimg nam_duplex_img">
         <div class="txtcont">
-          <h2>Room</h2>
-          <strong>KING DELUXE MOUNTAIN</strong>
+          <h2>Suite</h2>
+          <strong>NAMDAEMOON DUPLEX SUITE</strong>
           <p>
-            보다 넓은 객실에서 여유로운 휴식을 즐길 수 있는 패밀리 프리미엄
-            디럭스 룸(44㎡)은 침실과 응접실이 분리되어 있어 쾌적한 서비스를
-            제공합니다.
+            최상급 귀빈만을 위한 남대문 듀플렉스 스위트(385㎡)는 탁 트인 통
+            유리를 통해 사계절의 변화를 느낄 수 있는 남산을 한눈에 바라볼 수
+            있으며, 내려다 보이는 서울 시내의 야경은 특히 일품입니다.
           </p>
         </div>
       </div>
@@ -33,7 +33,7 @@
           <dl>
             <dt>LOCATION</dt>
             <br />
-            <dd>M8</dd>
+            <dd>M10</dd>
             <br />
           </dl>
         </li>
@@ -41,7 +41,7 @@
           <dl>
             <dt>VIEW</dt>
             <br />
-            <dd>Room</dd>
+            <dd>City</dd>
             <br />
           </dl>
         </li>
@@ -59,29 +59,29 @@
           <dl>
             <dt>BEDS</dt>
             <br />
-            <dd>King & Single</dd>
-            <br />
+            <dd>King</dd>
+            <br>
           </dl>
         </li>
         <li>
           <dl>
             <dt>Guest</dt>
             <br />
-            <dd>1 ~ 3</dd>
-            <br />
+            <dd>1 ~ 4</dd>
+            <br>
           </dl>
         </li>
         <li>
           <dl>
             <dt>ROOM FEATURES</dt>
             <br />
-            <dd>침실1 화장실1</dd>
-            <br />
+            <dd>침실1 화장실2</dd>
+            <br>
           </dl>
         </li>
       </ul>
     </div>
-    <div class="img_origin family_premium_img"></div>
+    <div class="img_origin nam_duplex_img"></div>
   </section>
 
   <section class="f34_w1440">
@@ -105,7 +105,7 @@
     </ul>
     <div class="amen_menu">
       <ul id="tab1" class="amen_wrap tabcontent" style="display: block">
-        <li>수용 인원 3명</li>
+        <li>수용 인원 5명</li>
         <li>손잡이 샤워기</li>
         <li>화상 방지 샤워부스/욕조</li>
         <li>헤어드라이어</li>
@@ -115,7 +115,7 @@
         <li>욕실 가운</li>
       </ul>
       <ul id="tab2" class="amen_wrap tabcontent" style="display: none">
-        <li>수용 인원 3명</li>
+        <li>수용 인원 5명</li>
         <li>목욕 가운</li>
         <li>커넥팅 룸</li>
         <li>라디오 알람 시계</li>
@@ -139,6 +139,7 @@
         <li>24시간 하우스키핑</li>
         <li>고속 인터넷 액세스</li>
         <li>객실 내 인터넷 접속</li>
+        <li>간이 취사장</li>
         <li>전화 - 자동 깨우기</li>
         <li>전화 - 2회선</li>
         <li>전화 - 2대의 전화</li>
@@ -168,7 +169,8 @@
         <li>
           <h2>In Room Dining</h2>
           <p>
-            객실에서 호텔 셰프가 선보이는 다양한 룸 서비스 메뉴를 즐겨보세요.
+            객실에서 호텔 셰프가 선보이는 다양한 룸 서비스 메뉴를
+            즐겨보세요.
           </p>
         </li>
       </ul>
@@ -184,9 +186,9 @@
           <span>Hilton Executive CLUB - FITNESS </span>
           <div class="service_wrap">
             <p>
-              이그제큐티브 헬스클럽에서는 최첨단의 하이테크 운동시설을 갖추고
-              있으며, 전문 트레이너가 여러분의 균형 있는 체력관리를 도와
-              드립니다.
+              이그제큐티브 헬스클럽에서는 최첨단의 하이테크 운동시설을
+              갖추고 있으며, 전문 트레이너가 여러분의 균형 있는 체력관리를
+              도와 드립니다.
             </p>
             <p>
               위치 힐튼 호텔 서울 2층<br />시간 월-토 06:00 - 22:00 / 일 &
@@ -201,8 +203,8 @@
           <span>Hilton Executive CLUB - POOL </span>
           <div class="service_wrap">
             <p>
-              자동 온도 조절이 가능한 실내 수영장으로 유리 아트리움식으로 꾸며져
-              밝은 자연광이 비치는 아래에서 수영을 하실 수 있습니다.
+              자동 온도 조절이 가능한 실내 수영장으로 유리 아트리움식으로
+              꾸며져 밝은 자연광이 비치는 아래에서 수영을 하실 수 있습니다.
             </p>
             <p>
               위치 힐튼 호텔 서울 3층<br />
@@ -234,19 +236,23 @@
       <h3>안내사항</h3>
       <div class="info_panel">
         <p>체크인은 15:00, 체크아웃은 12:00시입니다.</p>
-        <p>체크인 1일 전 23:59까지는 위약금 없이 변경 및 취소 가능합니다.</p>
         <p>
-          기후변화 또는 천재지변 등의 불가항력적 상황으로 호텔의 정상적 영업이
-          불가한 경우, 호텔의 고지 (휴대전화 문자, 홈페이지 게재 등)에 의하여
-          예약이 취소되거나 호텔 업장 이용이 제한될 수 있습니다.
+          체크인 1일 전 23:59까지는 위약금 없이 변경 및 취소 가능합니다.
+        </p>
+        <p>
+          기후변화 또는 천재지변 등의 불가항력적 상황으로 호텔의 정상적
+          영업이 불가한 경우, 호텔의 고지 (휴대전화 문자, 홈페이지 게재
+          등)에 의하여 예약이 취소되거나 호텔 업장 이용이 제한될 수
+          있습니다.
         </p>
         <p>
           코로나19에 따른 사회적 거리두기 정부 시책이 진행될 경우, 사우나 및
-          부대시설 이용에 제한이 있을 수 있습니다. (추후 상황에 따라 관련 내용
-          공지 예정)
+          부대시설 이용에 제한이 있을 수 있습니다. (추후 상황에 따라 관련
+          내용 공지 예정)
         </p>
         <p>
-          힐튼 서울의 객실 및 영업장을 포함한 호텔 내 모든 구역은 금연입니다.
+          힐튼 서울의 객실 및 영업장을 포함한 호텔 내 모든 구역은
+          금연입니다.
         </p>
       </div>
 
@@ -299,10 +305,16 @@
           href="javascript:shareFacebook();"
           >페이스북</a
         >
-        <a id="btnKakao" class="link-icon kakao" href="javascript:shareKakao();"
+        <a
+          id="btnKakao"
+          class="link-icon kakao"
+          href="javascript:shareKakao();"
           >카카오톡</a
         >
-        <a id="btnUrl" class="link-icon urlimg" onclick="clip(); return false;"
+        <a
+          id="btnUrl"
+          class="link-icon urlimg"
+          onclick="clip(); return false;"
           >URL복사
         </a>
       </div>
