--- a/views/parkhill_duplex_suite.ejs
+++ b/views/parkhill_duplex_suite.ejs
@@ -60,7 +60,7 @@
             <dt>BEDS</dt>
             <br />
             <dd>King 4</dd>
-            <br>
+            <br />
           </dl>
         </li>
         <li>
@@ -68,7 +68,7 @@
             <dt>Guest</dt>
             <br />
             <dd>1 ~ 5</dd>
-            <br>
+            <br />
           </dl>
         </li>
         <li>
@@ -76,7 +76,7 @@
             <dt>ROOM FEATURES</dt>
             <br />
             <dd>침실4 화장실2</dd>
-            <br>
+            <br />
           </dl>
         </li>
       </ul>
@@ -278,7 +278,7 @@
     <button>
       <span class="material-symbols-outlined"> favorite </span>
     </button>
-    <button>
+    <button onclick="javascript:location.href='/reservation'">
       <span class="material-symbols-outlined"> calendar_month </span>
     </button>
   </div>
@@ -309,5 +309,5 @@
       </div>
     </div>
   </div>
-  <script src="js/roomdetail.js"></script>
 </main>
+<script src="js/roomdetail.js"></script>
