--- a/views/reservation_detail.ejs
+++ b/views/reservation_detail.ejs
@@ -376,6 +376,9 @@
       </div>
       <input type="button" class="rsv_apply" value="예약완료" id="ResBtn"></input>
     </article>
+    <div class="fix_btn" id="location_side">
+      <button onclick="topFunction()">TOP</button>
+  </div>
   </section>
   <script src="js/reservation_detail.js"></script>
 </main>
