--- a/views/room.ejs
+++ b/views/room.ejs
@@ -141,7 +141,7 @@
                   >자세히보기</a
                 >
               </div>
-              <div class="parkhill_duplex_img img_resize"></div>
+              <div class="parkhill_duplex_suite_r img_resize"></div>
             </div>
           </div>
         </li>
@@ -218,9 +218,9 @@
                   트인 통 유리를 통해 사계절의 변화를 느낄 수 있는 남산을 한눈에
                   바라볼 수 있습니다.
                 </p>
-                <a href="nam_duplex_suilte" class="room_detail_w">자세히보기</a>
+                <a href="nam_duplex_suite" class="room_detail_w">자세히보기</a>
               </div>
-              <div class="nam_duplex_img img_resize"></div>
+              <div class="nam_duplex_suite_img img_resize"></div>
             </div>
           </div>
         </li>
