--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,13 +132,6 @@ body {
 .main_choice{
     position: relative;
 }
-.main_choice::after{
-    content: "";
-    position: absolute;
-    right: -50%; top: 20%;
-    width: 2px; height: 47px;
-    background-color: #B0AFAF;
-}
 .main_choice>h6{
     text-align: left;
 }
@@ -165,10 +158,17 @@ body {
     position: relative;
     display: flex;
 }
+.main_checkinout::before{
+    content: "";
+    position: absolute;
+    left: -13%; top: 20%;
+    width: 2px; height: 47px;
+    background-color: #B0AFAF;
+}
 .main_checkinout::after{
     content: "";
     position: absolute;
-    right: -20%; top: 20%;
+    right: -15%; top: 20%;
     width: 2px; height: 47px;
     background-color: #B0AFAF;
 }
@@ -197,7 +197,7 @@ body {
     margin-top: 12px;
     margin-bottom: 10px;
     border: 1px solid #B0AFAF;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     box-sizing: border-box;
     outline: none;
@@ -815,6 +815,9 @@ opacity: 90%;
         padding-bottom: 100px;
         box-sizing: border-box;
     }
+    .main_checkinout::before{
+        left: -5%;
+    }
     .main_offer{
         padding: 0;
     }
@@ -832,13 +835,6 @@ opacity: 90%;
         width: 100%;
         padding: 20px 30px;
         box-sizing: border-box;
-    }
-    .main_choice::after{
-        content: "";
-        position: absolute;
-        right: -15%; top: 20%;
-        width: 2px; height: 47px;
-        background-color: #B0AFAF;
     }
     .main_checkinout::after{
         content: "";
@@ -912,12 +908,8 @@ opacity: 90%;
     .main_swiper>div{
         padding-top: 50px;
     }
-    .main_choice::after{
-        content: "";
-        position: absolute;
-        right: -50%; top: 20%;
-        width: 2px; height: 47px;
-        background-color: #B0AFAF;
+    .main_checkinout::before{
+        left: 20%;
     }
     .main_top_gray>ul{
         display: none;
