--- a/public/css/reservation.css
+++ b/public/css/reservation.css
@@ -99,6 +99,7 @@ body {
     margin: 10px 0;
     box-sizing: border-box;
     outline: none;
+    font-size: 14px;
 }
 .reservation_1>button{
     cursor: pointer;
@@ -108,6 +109,7 @@ body {
     padding: 15px 0;
     margin-bottom: 30px;
     color: #fff;
+    outline: none; border: none;
 }
 .reservation_1>button:active{
     opacity: 90%;
@@ -144,12 +146,12 @@ body {
 }
 #reservation_1_men>li>h6{
     color: #494949;
-    flex-grow: 5;
+    flex-grow: 0.7;
 }
-#reservation_1_men>li>h6:nth-child(3){
-    flex-grow: 3;
-    text-align: center; 
-    margin: 0 7px;
+#reservation_1_men>li>p{
+    color: #494949;
+    flex-grow: 0.3;
+    text-align: center;
 }
 #reservation_1_men>li:nth-child(2)>h6:nth-child(3){
     margin: 0;
@@ -180,9 +182,12 @@ body {
 #reservation_1_men>li>button{
     cursor: pointer;
     width: 100%;
+    padding: 2px 0;
     background-color: #003F90;
     border: none;
     line-height: 40px;
+    font-family: initial;
+    font-size: 12px;
     color: #fff;
     text-align: center;
 }
@@ -289,6 +294,15 @@ body {
 }
 /**/
 #reservation_selection{
+    cursor: pointer;
+    display: block;
+    padding: 8px 30px;
+    box-sizing: border-box;
+    background-color: #19344D;
+    color: #fff;
+    text-align: center;
+}
+#reservation_selection>a{
     cursor: pointer;
     display: block;
     padding: 8px 30px;
@@ -514,6 +528,7 @@ textarea{
     color: #fff;
     text-align: center;
 }
+
 @media screen and (max-width: 1200px) {
     .reservation{
         width: 100%;
