--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,38 +1,65 @@
 
     <main class="login_b">
-        <form>
-            <section class="login_sec1440">
-                <article class="l_inner">
-                    <h1>로그인</h1>
-                    <ul class="login_wrap">
-                        <li class="member" onclick="">회원</li>
-                        <li class="nonmem" onclick="">비회원(예약확인)</li>
-                    </ul>
-                    <div class="tab_wrapper">
-                        <div class="login_icon">
-                            <span class="id_wrap">
-                                <p>ID</p>
-                                <input type="text">
-                                <span class="material-symbols-outlined">expand_more</span>
-                            </span>
-                        </div>
-                        <div class="pw_icon">
-                            <span class="id_wrap">
-                                <p>PASSWORD</p>
-                                <input type="password">
-                                <span class="material-symbols-outlined">lock</span>
-                            </span>
-                        </div>
-                        <div class="l_enter">
-                            <input type="submit" class="a_login" value="LOGIN">
-                        </div>
-                        <div class="l_txt">
-                            <p><a href="/join_agree">JOIN US </a></p>
-                            <span> | </span>
-                            <p><a href="">FIND ID and PASSWORD</a></p>
-                        </div>
+        <section class="login_sec1440">
+            <article class="l_inner">
+                <h1>로그인</h1>
+                <ul class="login_wrap">
+                    <li class="member" id="member">회원</li>
+                    <li class="nonmem" id="nonmem">비회원(예약확인)</li>
+                </ul>
+                <div class="tab_wrapper login_content">
+                    <div class="login_icon">
+                        <span class="id_wrap">
+                            <p>ID</p>
+                            <input type="text" >
+                            <span class="material-symbols-outlined">expand_more</span>
+                        </span>
                     </div>
-                </article>
-            </section>
-        </form>
+                    <div class="pw_icon">
+                        <span class="id_wrap">
+                            <p>PASSWORD</p>
+                            <input type="password">
+                            <span class="material-symbols-outlined">lock</span>
+                        </span>
+                    </div>
+                    <div class="l_enter">
+                        <a class="a_login" href="">
+                            <p>LOGIN</p>
+                        </a>
+                    </div>
+                    <div class="l_txt">
+                        <p><a href="/join">JOIN US </a></p>
+                        <span> | </span>
+                        <p><a href="">FIND ID and PASSWORD</a></p>
+                    </div>
+                </div>
+                <div class="tab_wrapper2 login_content">
+                    <div class="login_icon">
+                        <span class="id_wrap">
+                            <p>Iashdjkfhjkasdhfjk</p>
+                            <input type="text" >
+                            <span class="material-symbols-outlined">expand_more</span>
+                        </span>
+                    </div>
+                    <div class="pw_icon">
+                        <span class="id_wrap">
+                            <p>aasdkjfs</p>
+                            <input type="password">
+                            <span class="material-symbols-outlined">lock</span>
+                        </span>
+                    </div>
+                    <div class="l_enter">
+                        <a class="a_login" href="">
+                            <p>LOGIN</p>
+                        </a>
+                    </div>
+                    <div class="l_txt">
+                        <p><a href="/join">JOIN US </a></p>
+                        <span> | </span>
+                        <p><a href="">FIND ID and PASSWORD</a></p>
+                    </div>
+                </div>
+            </article>
+        <script src="../js/login.js"></script>
+        </section>
     </main>
