--- a/public/css/event_detail_teppanyaki .css
+++ b/public/css/event_detail_teppanyaki .css
@@ -34,7 +34,7 @@ p,em,h3{
     width: 100%;
     padding-top: 15%;
     padding-bottom: 15%;
-    background-image: url(../Img/pexels-cem-zaloğlu-6897406.jpg);
+    background-image: url(../img/pexels-cem-zaloğlu-6897406.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
