--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
                         </a>
                     </div>
                     <div class="l_txt">
-                        <p><a href="/join">JOIN US </a></p>
+                        <p><a href="/join_agree">JOIN US </a></p>
                         <span> | </span>
                         <p><a href="">FIND ID and PASSWORD</a></p>
                     </div>
@@ -36,14 +36,14 @@
                 <div class="tab_wrapper2 login_content">
                     <div class="login_icon">
                         <span class="id_wrap">
-                            <p>Iashdjkfhjkasdhfjk</p>
+                            <p>RESERVATION NUMBER</p>
                             <input type="text" >
                             <span class="material-symbols-outlined">expand_more</span>
                         </span>
                     </div>
                     <div class="pw_icon">
                         <span class="id_wrap">
-                            <p>aasdkjfs</p>
+                            <p>PHONE NUMBER</p>
                             <input type="password">
                             <span class="material-symbols-outlined">lock</span>
                         </span>
@@ -54,7 +54,7 @@
                         </a>
                     </div>
                     <div class="l_txt">
-                        <p><a href="/join">JOIN US </a></p>
+                        <p><a href="/join_agree">JOIN US </a></p>
                         <span> | </span>
                         <p><a href="">FIND ID and PASSWORD</a></p>
                     </div>
