--- a/views/family_premium_deluxe.ejs
+++ b/views/family_premium_deluxe.ejs
@@ -277,7 +277,7 @@
     <button>
       <span class="material-symbols-outlined"> favorite </span>
     </button>
-    <button onclick="javascript:location.href='/reservation'">
+    <button>
       <span class="material-symbols-outlined"> calendar_month </span>
     </button>
   </div>
