--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,7 +39,7 @@
                     <div class="main_checkin">
                         <h6>체크인</h6>
                         <div>
-                            <input id="MainCheakIn" value="2022-06-24" readonly></input>
+                            <input type="text" id="MainCheakIn" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                     <span>
@@ -48,7 +48,7 @@
                     <div class="MainCheakOut">
                         <h6>체크아웃</h6>
                         <div>
-                            <input id="main_OUT" value="2022-06-24" readonly></input>
+                            <input type="text" id="main_OUT" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                 </li>
@@ -475,8 +475,6 @@
             </div>
         </article>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
-    </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../js/main.js"></script>
 </main>
