--- a/public/css/login.css
+++ b/public/css/login.css
@@ -50,8 +50,8 @@ main>.login_sec1440{
     
 }
 .member{
-    background-color: #19344D;
-    color: white;
+    /* background-color: #19344D; */
+    color: black;
 }
 
 .tab_wrapper{
