--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,8 +4,8 @@
             <article class="l_inner">
                 <h1>로그인</h1>
                 <ul class="login_wrap">
-                    <li class="member" id="member">회원</li>
-                    <li class="nonmem" id="nonmem">비회원(예약확인)</li>
+                    <li class="member Ccolor" id="member">회원</li>
+                    <li class="nonmem nonCcolor" id="nonmem">비회원(예약확인)</li>
                 </ul>
                 <div class="tab_wrapper login_content">
                     <div class="login_icon">
