--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -42,6 +42,21 @@
                     <li><button id="resClear" onclick="printName()">완료</button></li>
                 </ul>
             </article>
+            <article class="reservation_1-1">
+                <div>
+                    <input id="ResCheakInM" value="2022-06-24" readonly></input>
+                    <span class="reservation_cal"></span>
+                </div>
+                <div>
+                    <input id="ResCheakOutM" value="2022-06-24" readonly></input>
+                    <span class="reservation_cal"></span>
+                </div>
+                <div id = reservation_peo>
+                    <p>성인 <input id="valueInputA" value="2" readonly> / 어린이 <input id="valueInputC" value="0"></p>
+                    <span class="reservation_peo_img">
+                    </span> 
+                </div>
+            </article>
             <article class="reservation_2">
                 <div class="reservation_top">
                     <h3>객실 & 옵션선택</h3>
