--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -64,7 +64,7 @@
           <p>
           <%= row.title%>
           </p>
-          <div class="noti_botton">
+          <!-- <div class="noti_botton">
             <input
               type="button"
               onclick="javascript:location.href='/updatenoti?id=<%=row.id%>'"
@@ -75,7 +75,7 @@
               onclick="javascript:location.href='/deletenoti?id=<%=row.id%>'"
               value="삭제"
             />
-          </div>
+          </div> -->
          </li>
          <% }) %>
          <script src="../js/notice.js"></script>
