--- a/views/reservation_detail.ejs
+++ b/views/reservation_detail.ejs
@@ -234,7 +234,7 @@
                 얼리 체크인과 레이트 체크아웃은 현장 상황에 따라 당일날 가능
                 여부를 확인 할 수 있으며 별도의 추가비용이 발생할 수 있습니다.
               </p>
-              <p>문의 : 064-780-8501</p>
+              <p>문의 : +82-2-753-7788</p>
               <br />
               <p>해피서비스</p>
               <p>
@@ -248,7 +248,7 @@
                 바랍니다.
               </p>
               <p>
-                해피서비스 : 해비치는 임산부와 어린이를 위한 렌탈서비스를
+                해피서비스 : 힐튼 호텔은 임산부와 어린이를 위한 렌탈서비스를
                 제공해드리고 있습니다.
               </p>
               <p>제한된 수량으로 대여 물품은 조기 마감 될 수 있습니다.</p>
@@ -258,14 +258,14 @@
           <ul class="rf_terms">
             <h3>4. 개인정보 수집항목 및 결제취소 규정 동의</h3>
             <label class="all_check">
-              <input class="checkbox" type="checkbox" id="chk01" />
+              <input class="checkbox" type="checkbox" id="chk01" name="chk01"/>
               <span><p>전체동의</p></span>
             </label>
             <li>
               <h4>개인정보 수집항목 및 이용동의
               </h4>
               <label class="rf_check">
-                <input class="checkbox" type="checkbox" id="chk02" />
+                <input class="checkbox" type="checkbox" id="chk02" name="cagree"/>
                 <span>동의<span class="require left1">(필수)</span></span>
               </label>
               <button class="btn_req accordion"></button>
@@ -306,7 +306,7 @@
                 </p>
                 <p>개인정보의 수집 방법</p>
                 <p>
-                  - 해비치는 서면양식, 홈페이지, 전화 및 팩스를 통한 본인 확인,
+                  - 힐튼은 서면양식, 홈페이지, 전화 및 팩스를 통한 본인 확인,
                   경품 행사 응모 등의 방법으로 개인정보를 수집 합니다.
                 </p>
                 <p>수집하는 개인정보의 보유 및 이용기간</p>
@@ -329,7 +329,7 @@
               </h4>
 
               <label class="rf_check">
-                <input class="checkbox" type="checkbox" id="chk03" />
+                <input class="checkbox" type="checkbox" id="chk03" name="cagree" />
                 <span>동의<span class="require left2">(필수)</span></span>
               </label>
               <button class="btn_req accordion"></button>
