--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -59,7 +59,7 @@
         <% rows.forEach((row, index)=>{ %>
         <li onclick="javascript:location.href='/notice_deta?id=<%=row.id%>'">
           <p>
-            <%= row.id%>
+            <%= row.noticeItem%>
           </p>
           <p>
           <%= row.title%>
