--- a/views/main.ejs
+++ b/views/main.ejs
@@ -48,7 +48,7 @@
                     <div class="MainCheakOut">
                         <h6>체크아웃</h6>
                         <div>
-                            <input type="text" id="main_OUT" value="2022-06-24" readonly></input>
+                            <input type="text" id="MainCheakOut" value="2022-06-24" readonly></input>
                         </div>
                     </div>
                 </li>
